# textprint

./: .gitignore  README.md  build_web.py  config.example.yaml  pyproject.toml
docs/: import.js  index.html
docs/pysrc/: manifest.json
docs/pysrc/textprint/: __init__.py  interpret.py  render.py  sampler.py  webbuild.py  wrapped.py
docs/pysrc/textprint/parsers/: __init__.py
server/: README.md  proxy.py  setup_tunnel.ps1  start.ps1  start_tailscale.ps1
textprint/: cli.py  ig_stats.py  interpret.py  render.py  schema.py  stats.py  webbuild.py
textprint/parsers/: __init__.py  html_export.py  instagram.py
textprint/providers/: __init__.py  base.py  ollama.py
